Fix color behind navigation

--- a/src/scss/palette.scss
+++ b/src/scss/palette.scss
@@ -1,4 +1,5 @@
-$off_white: #F0F0F0;
-$off_white_opaque: rgba(240, 240, 240, 0.4);
-$shadow_black: #222222;
 $black: #000000;
+$off_white_opaque: rgba(240, 240, 240, 0.4);
+$off_white: #F0F0F0;
+$shadow_black: #222222;
+$white: #FFFFFF;
